fix: Min-height removes overflow at small screens

--- a/src/styles/preview.css
+++ b/src/styles/preview.css
@@ -140,6 +140,7 @@ hr {
     width: 50%;
     min-width: 300px;
     box-sizing: border-box;
+    min-height: fit-content;
   }
 }
 
